Do not use help2man to build manual pages
This prevents problems when cross compiling. Using help2man is now also of
limited use; if we can just tell the user to use --help we do not need to keep
the manual in sync.

It also allows us to drop the several other supporting files that we use when
the help2man output isn't actually that useful.

Fixes https://github.com/fwupd/fwupd/issues/3025

--- a/plugins/dfu/meson.build
+++ b/plugins/dfu/meson.build
@@ -87,22 +87,12 @@ fu_dfu_tool = executable(
 )
 
 if get_option('man')
-  help2man = find_program('help2man')
-  extra = join_paths(meson.current_source_dir(), 'fu-dfu-tool.h2m')
-  custom_target('dfu-tool-man',
-    input : fu_dfu_tool,
+  configure_file(
+    input : 'dfu-tool.1',
     output : 'dfu-tool.1',
-    command : [
-      help2man, '@INPUT@',
-      '--no-info',
-      '--output', '@OUTPUT@',
-      '--name', 'dfu-tool',
-      '--manual', 'User Commands',
-      '--version-string', fwupd_version,
-      '--include', extra,
-    ],
-    install : true,
-    install_dir : join_paths(mandir, 'man1'),
+    configuration : conf,
+    install: true,
+    install_dir: join_paths(mandir, 'man1'),
   )
 endif
 
