--- a/meson.build
+++ b/meson.build
@@ -349,6 +349,9 @@ endif
 if cc.has_header_symbol('locale.h', 'LC_MESSAGES')
   conf.set('HAVE_LC_MESSAGES', '1')
 endif
+if cc.has_header_symbol('fcntl.h', 'F_WRLCK')
+  conf.set('HAVE_WRLCK', '1')
+endif
 if cc.has_function('pwrite', args : '-D_XOPEN_SOURCE')
   conf.set('HAVE_PWRITE', '1')
 endif
