Add a utility to resign firmware files
This can be used like this:

    fwupdtool firmware-sign firmware.cab rhughes_signed.pem rhughes.key

Test signing certificates can be generated using the example script here:
https://github.com/hughsie/libjcat/blob/master/contrib/build-certs.py although
these certificates should not be used for enterprise use.

--- a/data/bash-completion/fwupdtool.in
+++ b/data/bash-completion/fwupdtool.in
@@ -9,6 +9,7 @@ _fwupdtool_cmd_list=(
 	'firmware-export'
 	'firmware-extract'
 	'firmware-parse'
+	'firmware-sign'
 	'get-updates'
 	'get-upgrades'
 	'get-details'
