--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -441,6 +441,7 @@ done
 %{_libdir}/fwupd-plugins-3/libfu_plugin_pci_bcr.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_pci_mei.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_pixart_rf.so
+%{_libdir}/fwupd-plugins-3/libfu_plugin_realtek_mst.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_redfish.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_rts54hid.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_rts54hub.so
