--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -44,6 +44,7 @@ subdir('pci-bcr')
 subdir('pci-mei')
 subdir('pixart-rf')
 subdir('platform-integrity')
+subdir('realtek-mst')
 subdir('redfish')
 subdir('rts54hid')
 subdir('rts54hub')
