fu-tool.c: Use traditional UNIX record locks if OFD is not available
Open file description locks are Linux-specific. If fwupd is not built
for Linux, it should use the traditional UNIX record locks (F_SETLK).

Signed-off-by: Norbert Kamiński <norbert.kaminski@3mdeb.com>

--- a/meson.build
+++ b/meson.build
@@ -352,6 +352,9 @@ endif
 if cc.has_header_symbol('fcntl.h', 'F_WRLCK')
   conf.set('HAVE_WRLCK', '1')
 endif
+if cc.has_header_symbol('fcntl.h', 'F_OFD_SETLK')
+  conf.set('HAVE_OFD', '1')
+endif
 if cc.has_function('pwrite', args : '-D_XOPEN_SOURCE')
   conf.set('HAVE_PWRITE', '1')
 endif
