Add an option to avoid building UEFI binary
This will allow packagers to choose to distribute the binary from
the fwupd-efi subproject instead.

--- a/plugins/uefi/meson.build
+++ b/plugins/uefi/meson.build
@@ -1,4 +1,9 @@
-subdir('efi')
+if get_option('efi_binary')
+  efi_binary = dependency('fwupd-efi', required: false)
+  if not efi_binary.found()
+    subdir('efi')
+  endif
+endif
 
 cargs = ['-DG_LOG_DOMAIN="FuPluginUefi"']
 
