--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
       uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
       with:
         oss-fuzz-project-name: 'fwupd'
-        fuzz-seconds: 300
+        fuzz-time: 300
         dry-run: false
     - name: Upload Crash
       uses: actions/upload-artifact@v1
