Use libproxy to get the system proxy setting for a given URL

--- a/libfwupd/meson.build
+++ b/libfwupd/meson.build
@@ -37,6 +37,10 @@ if get_option('curl')
   libfwupd_deps += libcurl
 endif
 
+if get_option('proxy')
+  libfwupd_deps += libproxy
+endif
+
 libfwupd_src = [
   'fwupd-client.c',
   'fwupd-client-sync.c',
