MBIM QDU support for firmware downloading in the MM plugin

--- a/meson.build
+++ b/meson.build
@@ -406,10 +406,12 @@ if build_standalone and get_option('plugin_dell')
 endif
 
 if build_standalone and get_option('plugin_modem_manager')
-  libmm_glib = dependency('mm-glib', version : '>= 1.10.0')
-  add_project_arguments('-DMM_REQUIRED_VERSION="1.10.0"', language : 'c')
+  libmm_glib = dependency('mm-glib', version : '>= 1.17.0')
+  add_project_arguments('-DMM_REQUIRED_VERSION="1.17.0"', language : 'c')
   libqmi_glib = dependency('qmi-glib', version : '>= 1.22.0')
   add_project_arguments('-DQMI_REQUIRED_VERSION="1.23.1"', language : 'c')
+  libmbim_glib = dependency('mbim-glib', version : '>= 1.25.0')
+  add_project_arguments('-DMBIM_REQUIRED_VERSION="1.25.3"', language : 'c')
 endif
 
 if get_option('soup_session_compat')
