Check the versions of libfwupd and libfwupdplugin at startup
This prevents super-hard-to-debug crashes like we saw in #3197 where the user
was mixing PPAs and official versions.

--- a/libfwupd/fwupd-version.h.in
+++ b/libfwupd/fwupd-version.h.in
@@ -6,6 +6,8 @@
 
 #pragma once
 
+#include <glib.h>
+
 /**
  * SECTION:fwupd-version
  * @short_description: Obtains the version for the installed fwupd
@@ -59,3 +61,5 @@
      (FWUPD_MAJOR_VERSION == (major) && FWUPD_MINOR_VERSION > (minor)) || \
      (FWUPD_MAJOR_VERSION == (major) && FWUPD_MINOR_VERSION == (minor) && \
       FWUPD_MICRO_VERSION >= (micro)))
+
+const gchar	*fwupd_version_string			(void);
