--- a/plugins/dell-dock/meson.build
+++ b/plugins/dell-dock/meson.build
@@ -14,7 +14,8 @@ shared_module('fu_plugin_dell_dock',
     'fu-dell-dock-i2c-ec.c',
     'fu-dell-dock-hub.c',
     'fu-dell-dock-i2c-tbt.c',
-    'fu-dell-dock-i2c-mst.c'
+    'fu-dell-dock-i2c-mst.c',
+    'fu-dell-dock-usb-usb4.c'
   ],
   include_directories : [
     root_incdir,
