trivial: move circleci for windows build to fedora 33

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
   build-windows:
     docker:
-      - image: fedora:latest
+      - image: fedora:33
     steps:
       - run:
           name: "Install deps"
