trivial: Remove warnings from the GObjectIntrospection output

--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -190,6 +190,7 @@ if get_option('introspection') and get_option('gusb')
     symbol_prefix : 'fu',
     identifier_prefix : 'Fu',
     export_packages : 'fu',
+    extra_args : '-DHAVE_GUSB',
     include_directories : [
       fwupd_incdir,
     ],
