Move PS175 support to a new parade_lspcon plugin
The new FuFlashromContext allows multiple plugins to safely use libflashrom
under the hood, so PS175 support can be moved to a new plugin since handling
multiple very different devices (system firmware and LSPCON) in a single
plugin (flashrom) seems undesirable.

The new plugin maintains compatibility with the old device GUIDs but also
adopts a new, more accurate one.

--- a/plugins/parade-lspcon/meson.build
+++ b/plugins/parade-lspcon/meson.build
@@ -1,19 +1,18 @@
-if get_option('plugin_flashrom')
+if get_option('plugin_parade_lspcon')
 if not get_option('libflashrom')
-  error('libflashrom is required for plugin_flashrom')
+  error('libflashrom is required for plugin_parade_lspcon')
 endif
-cargs = ['-DG_LOG_DOMAIN="FuPluginFlashrom"']
+cargs = ['-DG_LOG_DOMAIN="FuPluginParadeLspcon"']
 
-install_data(['flashrom.quirk'],
+install_data(['parade-lspcon.quirk'],
   install_dir: join_paths(get_option('datadir'), 'fwupd', 'quirks.d')
 )
 
-shared_module('fu_plugin_flashrom',
+shared_module('fu_plugin_parade_lspcon',
   fu_hash,
   sources : [
-    'fu-flashrom-device.c',
-    'fu-flashrom-internal-device.c',
-    'fu-plugin-flashrom.c',
+    'fu-parade-lspcon-device.c',
+    'fu-plugin-parade-lspcon.c',
   ],
   include_directories : [
     root_incdir,
