trivial: Remove a build warning by including Json properly

--- a/libfwupd/meson.build
+++ b/libfwupd/meson.build
@@ -135,13 +135,14 @@ if get_option('introspection')
     includes : [
       'Gio-2.0',
       'GObject-2.0',
+      'Json-1.0',
     ],
     install : true
   )
 
   gnome.generate_vapi('fwupd',
     sources : fwupd_gir[0],
-    packages : ['gio-2.0'],
+    packages : ['gio-2.0', 'json-glib-1.0'],
     install : true,
   )
 
