fu-smbios.c: Add kenv support
Signed-off-by: Norbert Kamiński <norbert.kaminski@3mdeb.com>

--- a/meson.build
+++ b/meson.build
@@ -318,6 +318,9 @@ endif
 if cc.has_header('fnmatch.h')
   conf.set('HAVE_FNMATCH_H', '1')
 endif
+if cc.has_header('kenv.h')
+  conf.set('HAVE_KENV_H', '1')
+endif
 if cc.has_header('malloc.h')
   conf.set('HAVE_MALLOC_H', '1')
   if cc.has_function('malloc_trim', prefix: '#include <malloc.h>')
