--- a/plugins/pixart-rf/meson.build
+++ b/plugins/pixart-rf/meson.build
@@ -11,6 +11,9 @@ shared_module('fu_plugin_pixart_rf',
     'fu-plugin-pixart-rf.c',
     'fu-pxi-device.c',
     'fu-pxi-common.c',
+    'fu-pxi-wireless-device.c',
+    'fu-pxi-wireless-module.c',
+    'fu-pxi-dongle-module.c',
     'fu-pxi-firmware.c',      # fuzzing
   ],
   include_directories : [
