Export FuBackend into libfwupdplugin for future use

--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -1,5 +1,6 @@
 fwupdplugin_src = [
   'fu-archive.c',
+  'fu-backend.c',
   'fu-bluez-device.c',
   'fu-cabinet.c',
   'fu-chunk.c',             # fuzzing
@@ -37,6 +38,7 @@ fwupdplugin_src = [
 
 fwupdplugin_headers = [
   'fu-archive.h',
+  'fu-backend.h',
   'fu-bluez-device.h',
   'fu-cabinet.h',
   'fu-chunk.h',
