trivial: Do not change ABI when -Dudev=false

--- a/libfwupdplugin/meson.build
+++ b/libfwupdplugin/meson.build
@@ -98,6 +98,7 @@ fwupdplugin_headers_private = [
   'fu-plugin-private.h',
   'fu-security-attrs-private.h',
   'fu-smbios-private.h',
+  'fu-udev-device-private.h',
   'fu-usb-device-private.h',
   'fu-version.h',
 ]
@@ -113,7 +114,6 @@ if get_option('gusb')
 endif
 
 if get_option('gudev')
-  fwupdplugin_headers_private += 'fu-udev-device-private.h'
   introspection_deps += gudev
 endif
 
