--- a/meson.build
+++ b/meson.build
@@ -252,7 +252,7 @@ libm = cc.find_library('m', required: false)
 libgcab = dependency('libgcab-1.0', version : '>= 1.0', fallback : ['gcab', 'gcab_dep'])
 gcab = find_program('gcab', required : get_option('tests'))
 bashcomp = dependency('bash-completion', required: false)
-python3 = find_program('python3')
+python3 = find_program('python3.8', 'python3', 'python3.9')
 
 if get_option('gnutls')
   gnutls = dependency('gnutls', version : '>= 3.6.0')
