Allow building the documentation with gi-docgen and gtk-doc
Until gi-docgen is declared stable support either of them.
This effectively means that hand builds and CI builds will use
gi-docgen, but distro builds use gtk-doc-tools.

--- a/contrib/freebsd/Makefile
+++ b/contrib/freebsd/Makefile
@@ -54,6 +54,7 @@ MESON_ARGS=	-Dgudev=false \
 		-Dpolkit=false \
 		-Dsystemd=false \
 		-Dtests=false \
+		-Ddocs=gtkdoc \
 		-Defi_binary=false
 
 .include <bsd.port.mk>
