--- a/contrib/PKGBUILD
+++ b/contrib/PKGBUILD
@@ -30,6 +30,7 @@ build() {
     arch-meson -D b_lto=false $CI ../build \
         -Dplugin_intel_spi=true \
         -Dlzma=true \
+        -Ddocs=gtkdoc \
         -Defi_binary=false \
         -Dsupported_build=true
 
