--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -48,7 +48,7 @@ ifneq ($(QUBES_OPTION),)
 	CONFARGS += -Dqubes=true
 endif
 
-CONFARGS += -Dplugin_dummy=true -Dgtkdoc=true -Dsupported_build=true
+CONFARGS += -Dplugin_dummy=true -Ddocs=gtkdoc -Dsupported_build=true
 
 %:
 	dh $@ --with gir
