disable wrap mode for debian (if deps are missing we don't run packaging)

--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -13,7 +13,7 @@ endif
 CONFARGS =
 
 ifneq ($(CI),)
-	CONFARGS += --werror --wrap-mode=default
+	CONFARGS += --werror
 endif
 
 ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
