--- a/plugins/modem-manager/meson.build
+++ b/plugins/modem-manager/meson.build
@@ -11,6 +11,7 @@ shared_module('fu_plugin_modem_manager',
     'fu-plugin-modem-manager.c',
     'fu-mm-device.c',
     'fu-qmi-pdc-updater.c',
+    'fu-firehose-updater.c',
     'fu-mm-utils.c'
   ],
   include_directories : [
