Enable dbus on Windows build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
                                   mingw64-libarchive
                                   mingw64-json-glib
                                   mingw64-curl
+                                  mingw64-dbus
                                   wine
       - checkout
       - run:
