--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -25,7 +25,7 @@ subdir('goodix-moc')
 subdir('hailuck')
 subdir('iommu')
 subdir('jabra')
-subdir('kinetic-mst')
+subdir('kinetic-dp')
 subdir('linux-lockdown')
 subdir('linux-sleep')
 subdir('linux-swap')
