Add tuxec plugin
Based off (copied from) the flashrom plugin.

Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -55,6 +55,7 @@ subdir('synaptics-prometheus')
 subdir('synaptics-rmi')
 subdir('system76-launch')
 subdir('test')
+subdir('tuxec')
 subdir('thelio-io')
 subdir('thunderbolt')
 subdir('tpm')
