--- a/docs/meson.build
+++ b/docs/meson.build
@@ -64,6 +64,10 @@ if get_option('docs') == 'docgen'
     install: true,
     install_dir: join_paths(datadir, 'doc', 'fwupd'),
   )
+
+ install_data(['index.html'],
+    install_dir : join_paths(datadir, 'doc', 'fwupd')
+  )
 elif get_option('docs') == 'gtkdoc'
   gnome.gtkdoc(
     'fwupd',
