Refine code before push to Github

--- a/plugins/kinetic-dp/meson.build
+++ b/plugins/kinetic-dp/meson.build
@@ -17,6 +17,8 @@ shared_module('fu_plugin_kinetic_dp',
     'fu-kinetic-dp-device.c',
     'fu-kinetic-dp-firmware.c',
     'fu-kinetic-dp-aux-dpcd.c',
+    'fu-kinetic-dp-aux-isp.c',
+    'fu-kinetic-dp-secure-aux-isp.c',
   ],
   include_directories : [
     root_incdir,
