pixart-rf: Split out some common code to a new file

--- a/plugins/pixart-rf/meson.build
+++ b/plugins/pixart-rf/meson.build
@@ -9,6 +9,7 @@ shared_module('fu_plugin_pixart_rf',
   fu_hash,
   sources : [
     'fu-plugin-pixart-rf.c',
+    'fu-pxi-common.c',
     'fu-pxi-device.c',
     'fu-pxi-firmware.c',      # fuzzing
   ],
