Further Edit of powerd Skeleton Plugin
The fu-plugin-upower.c file was mostly emptied, leaving only the the
function inititalization with a return or some variable initializations.
It was also renamed to fu-plugin-cros-powerd.c to fit the project it
will be used in.

The README.md file was edited to exclude information specific to upower
The meson.build file was largely commented (since the parts it includes
have yet to implemented), and the upower.conf install function was
removed to be consistent with an upstream change.

Change-Id: I588e83d29651e0195dd100ecdd63ca13cba41bdd

--- a/plugins/powerd/meson.build
+++ b/plugins/powerd/meson.build
@@ -1,13 +1,13 @@
 if host_machine.system() == 'linux'
-cargs = ['-DG_LOG_DOMAIN="FuPluginUpower"']
+  #cargs = ['-DG_LOG_DOMAIN="FuPluginPowerd"']
 
-install_data(['upower.quirk'],
-  install_dir: join_paths(datadir, 'fwupd', 'quirks.d'))
+#install_data(['daemon.quirk'],
+  #install_dir: join_paths(datadir, 'fwupd', 'quirks.d'))
 
-shared_module('fu_plugin_upower',
+'''shared_module('fu_plugin_cros_powerd',
   fu_hash,
   sources : [
-    'fu-plugin-upower.c',
+    'fu-plugin-cros-powerd.c',
   ],
   include_directories : [
     root_incdir,
@@ -20,13 +20,10 @@ shared_module('fu_plugin_upower',
     fwupd,
     fwupdplugin,
   ],
-  c_args : cargs,
-  dependencies : [
+  '''c_args : cargs,'''
+ ''' dependencies : [
     plugin_deps,
   ],
-)
+)'''
 
-install_data(['upower.conf'],
-  install_dir:  join_paths(sysconfdir, 'fwupd')
-)
 endif
