Further Edit of Plugin Components
This CL modifies the powerd skeleton plugin by adding the appropriate
variable declarations and functions to fu-plugin-powerd.c (formerly fu-plugin-cros-powerd.c),
while also making stylistic changes such as by deleting whitespace.
It uncomments the plugins/powerd/meson.build file so it can be compiled and adds
the powerd subdirectory to the plugins/meson.build file.

The required DBus interface is also specified in the powerd README.md file.
Change-Id: I847105f445058f42a928691d61d2f994cd523ccb

Change-Id: I6586fce991f1e101ed46b025f5966747120b9dc8

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -43,6 +43,7 @@ subdir('pci-bcr')
 subdir('pci-mei')
 subdir('pixart-rf')
 subdir('platform-integrity')
+subdir('powerd')
 subdir('redfish')
 subdir('rts54hid')
 subdir('rts54hub')
