--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -28,6 +28,7 @@ subdir('hailuck')
 subdir('intel-spi')
 subdir('iommu')
 subdir('jabra')
+subdir('lenovo-thinklmi')
 subdir('linux-lockdown')
 subdir('linux-sleep')
 subdir('linux-swap')
