Add EC plugin (ECs with custom protocols)
Signed-off-by: Sergii Dmytruk <sergii.dmytruk@3mdeb.com>

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -17,6 +17,7 @@ subdir('dell-esrt')
 subdir('dfu')
 subdir('dfu-csr')
 subdir('ebitdo')
+subdir('ec')
 subdir('elantp')
 subdir('emmc')
 subdir('ep963x')
