--- a/contrib/fwupd.spec.in
+++ b/contrib/fwupd.spec.in
@@ -446,6 +446,7 @@ done
 %{_libdir}/fwupd-plugins-3/libfu_plugin_solokey.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_steelseries.so
 %{_libdir}/fwupd-plugins-3/libfu_plugin_superio.so
+%{_libdir}/fwupd-plugins-3/libfu_plugin_ec.so
 %if 0%{?have_dell}
 %{_libdir}/fwupd-plugins-3/libfu_plugin_synaptics_mst.so
 %endif
